[package]
authors = ['JNHua <huajiannan@abmatrix.cn>']
build = 'build.rs'
edition = '2018'
name = 'contract'
version = '1.0.0'

[[bin]]
name = 'contract_runtime'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-basic-authorship'


[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-consensus-aura'


[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-inherents'


[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-network'


[dependencies.contract-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-primitives'


[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'


[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'


[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'


[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'


[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'


[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-transaction-pool'
