[[bin]]
name = 'turing-node'
path = 'src/main.rs'

[package]
authors = ['Turing Network <contact@Turingnetwork.io>']
build = 'build.rs'
edition = '2018'
name = 'turing-node'
version = '0.2.0'
[profile.release]
panic = 'unwind'

[dependencies]
error-chain = "0.12"
cli = { package = "node-cli", path = "./cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
node-runtime = { path = "./runtime" }

[dependencies.telemetry]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-telemetry'
rev = '6e67eff0653677d3d01980ca822c4b8a227914a3'

[build-dependencies]
vergen = "3"

[workspace]
members = [
    "cli",
    "executor",
    "runtime",
    "turingml/staking",
    "turingml/aura"
]

exclude = [
    "runtime/wasm",
]