[package]
name = "node-primitives"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Turing Network <contact@turingnetwork.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/paritytech/substrate", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3" }
pretty_assertions = "0.5"

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"rstd/std",
	"runtime_primitives/std",
	"serde",
]
