[package]
authors = ['JNHua <huajiannan@abmatrix.cn>']
edition = '2018'
name = 'contract-runtime'
version = '1.0.0'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-aura'


[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-balances'


[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-client'


[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-consensus'


[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-consensus-aura-primitives'


[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-consensus-authorities'


[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-executive'


[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-indices'


[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-offchain-primitives'


[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'substrate-primitives'


[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'sr-std'


[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'sr-io'


[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'sr-primitives'


[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-sudo'


[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-support'


[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-system'


[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'srml-timestamp'


[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '040a45a7e2900e4d9f5c6be364ceb93e280a512c'
package = 'sr-version'


[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
]
