[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'consensus_authorities/std',
    'staking/std',
    'session/std',
    'grandpa/std',
    'contract/std',
    'democracy/std',
    'council/std',
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.contract]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contract'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.treasury]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-treasury'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.council]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-council'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.finality-tracker]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-finality-tracker'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.democracy]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-democracy'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'turing-node-runtime'
version = '1.0.0'
