[profile.release]
lto = true
panic = 'abort'
[dependencies.turing-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['turing-node-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'turing-node-runtime-wasm'
version = '1.0.0'
