[profile.release]
lto = true
panic = 'abort'
[dependencies.turing-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['turing-node-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Turing Network <huajiannan@abmatrix.cn>']
edition = '2018'
name = 'turing-node-runtime-wasm'
version = '0.1.0'
