[package]
authors = ['Turing Network <contact@turingnetwork.io>']
edition = '2018'
name = 'node-runtime-wasm'
version = '0.2.0'

[lib]
name = "node_runtime"
crate-type = ["cdylib"]

[dependencies]
node-runtime = { path = "..", default-features = false }

[features]
default = ["core"]
core = [
	"node-runtime/core",
]
std = [
	"node-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
