[package]
name = "turing-staking"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3",optional = true }
rstd = { package = "sr-std",  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3",default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
primitives = { package = "sr-primitives",  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
srml-support = {  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
consensus = { package = "srml-consensus",  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
system = { package = "srml-system",  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
session = { package = "srml-session",  git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }
timestamp = { package = "srml-timestamp",git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3" }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git", rev = "6e67eff0653677d3d01980ca822c4b8a227914a3" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
	"session/std",
	"system/std",
]
